--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="not-loaded">
     
-    <div class="night"><p class="text">Please forgive me Xia</p></div>
+    <div class="night"><p class="text">Please forgive me😞😢Baby MWAH😘</p></div>
     
     <div class="flowers">
       <div class="flower flower--1">
